Exercise JS Best Practices

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,7 @@
         <div id="date"></div>
     </div>
     <div class="content">
-        <ul id="list">
-        </ul>
+        <ul id="list"></ul>
     </div>
     <div class="add-to-do">
       <i class="fa fa-plus-circle"></i>
